# ASVR

./: README.md  pyproject.toml  train.py
asvr/: __init__.py  constants.py  conversation.py  mm_utils.py  utils.py
asvr/model/: __init__.py  apply_delta.py  asvr_arch.py  builder.py
asvr/model/language_model/: asvr_llama.py  asvr_mistral.py  asvr_qwen.py
asvr/model/multimodal_encoder/: builder.py  rqsiglip_encoder.py
asvr/model/multimodal_encoder/rqvaesigliptransformer/: modeling_rqvaesigliptransformer.py
asvr/model/multimodal_encoder/rqvaesigliptransformer/rqtransformer/: configuration_rqtransformer.py  modeling_rqtransformer.py
asvr/model/multimodal_encoder/rqvaesigliptransformer/rqvaesiglip/: configuration_rqvaesiglip.py  modeling_rqvaesiglip.py  modules.py  quantizations.py
asvr/model/multimodal_encoder/siglip/: siglip_encoder.py
asvr/train/: asvr_trainer.py  train_xformers.py
scripts/: finetune.sh  pretrain.sh
